rename so that we can run multiple versions

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: WP CLT
+Theme Name: WP CLT Beta
 Theme URI: https://github.com/wpclt/wpclt-beta
 Author: Wordpress Charlotte
 Author URI: https://github.com/wpclt
 Description: Description
-Version: 1.0.0
+Version: 0.1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: wpclt
