design changes to header and footer. added widget areas for footer

--- a/style.css
+++ b/style.css
@@ -42,6 +42,14 @@ wpclt is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, 
 }
 
 /*--------------------------------------------------------------
+## Footer
+--------------------------------------------------------------*/
+
+footer {
+	background: blue;
+}
+
+/*--------------------------------------------------------------
 ## Menus
 --------------------------------------------------------------*/
 
