--- a/wp-content/themes/wpclt/style.css
+++ b/wp-content/themes/wpclt/style.css
@@ -47,6 +47,25 @@ wpclt is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, 
 }
 
 /*--------------------------------------------------------------
+## Text Bars
+--------------------------------------------------------------*/
+
+
+.wide-text-bar {
+	padding: 100px;
+	text-align: center;
+}
+
+.text-bar-grey {
+	background: #eeeeee;
+}
+
+
+.bg-pic-wordcamp {
+	background: url('images/background/wordcamp-atlanta.jpg');
+}
+
+/*--------------------------------------------------------------
 ## Footer
 --------------------------------------------------------------*/
 
