--- a/wp-content/themes/wpclt/style.css
+++ b/wp-content/themes/wpclt/style.css
@@ -50,10 +50,24 @@ wpclt is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, 
 ## Text Bars
 --------------------------------------------------------------*/
 
-
 .wide-text-bar {
-	padding: 100px;
+	padding: 125px;
 	text-align: center;
+
+	-moz-opacity: 0.98;
+	-khtml-opacity: 0.98;
+	opacity: 0.98;
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=98);
+	filter: progid:DXImageTransform.Microsoft.Alpha(opacity=98);
+	filter:alpha(opacity=98);
+
+	-webkit-box-shadow: 0px 9px 18px -3px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 9px 18px -3px rgba(0,0,0,0.75);
+	box-shadow: 0px 9px 18px -3px rgba(0,0,0,0.75);
+}
+
+.wide-text-bar h2 {
+	font-size: 3em;
 }
 
 .text-bar-grey {
@@ -62,7 +76,23 @@ wpclt is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, 
 
 
 .bg-pic-wordcamp {
-	background: url('images/background/wordcamp-atlanta.jpg');
+	background: url('images/backgrounds/wordcamp-atlanta.jpg');
+}
+
+/*--------------------------------------------------------------
+## Home Page
+--------------------------------------------------------------*/
+
+.presentations-list {
+	height: 400px;
+	background: #fff;
+
+	-moz-opacity: 0.75;
+	-khtml-opacity: 0.75;
+	opacity: 0.75;
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=75);
+	filter: progid:DXImageTransform.Microsoft.Alpha(opacity=75);
+	filter:alpha(opacity=75);
 }
 
 /*--------------------------------------------------------------
